:hammer: Fixed external event - responsible workshop

--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -45,9 +45,9 @@
           {{ data.miningOperation ? data.miningOperation : "---" }}
         </p>
         <p>
-          <span style="font-weight: bold"> Taller que reporta :</span>
+          <span style="font-weight: bold"> Taller - Posible responsable :</span>
           {{
-            data.reportingWorkshop ? data.reportingWorkshop.workshopName : "---"
+            data.workShop ? data.workShop : "---"
           }}
         </p>
         <p>
