--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -29,7 +29,7 @@
           {{ data.eventType ? data.eventType : "---" }}
         </p>
         <p>
-          <span style="font-weight: bold"> Taller responsable:</span>
+          <span style="font-weight: bold"> Taller - Posible responsable:</span>
           {{ data.workShop ? data.workShop : "---" }}
         </p>
         <p>
