--- a/src/app/main/pages/quality/analysis/progress/dialogs/time-line-dialog/time-line-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/time-line-dialog/time-line-dialog.component.html
@@ -52,7 +52,7 @@
         }}
       </p>
       <p>
-        <span style="font-weight: bold"> Taller responsable :</span>
+        <span style="font-weight: bold"> Taller - Posible responsable :</span>
         {{ data.workShop ? data.workShop : "---" }}
       </p>
       <p *ngIf="data.eventType === 'Interno'">
