:sparkles: Feature done - Send budgets and quality update

--- a/src/app/main/pages/spares/replacements/replacements.component.html
+++ b/src/app/main/pages/spares/replacements/replacements.component.html
@@ -82,7 +82,7 @@
                                 <mat-icon>edit</mat-icon>
                                 Editar
                             </button>
-                            <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)" *ngIf="authService.uiConfig.spareParts.replacements.toolbar.delete">
+                            <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)" *ngIf="authService.uiConfig.spareParts.replacements.actions.delete">
                                 <mat-icon>delete</mat-icon>
                                 Borrar
                             </button>
