--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.scss
@@ -3,7 +3,6 @@
     flex-direction: row;
     align-items: center;
     margin: 8px 0px;
-
     &__title {
         font-family: Poppins !important;
         font-style: normal !important;
@@ -13,7 +12,6 @@
         color: rgba(43, 43, 43, 0.87) !important;
         margin: 0px 0px;
     }
-
     &__icon {
         margin-top: 0px;
         cursor: pointer;
@@ -33,7 +31,6 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
-
     &__img {
         display: block;
         margin: 0 auto;
@@ -54,7 +51,6 @@
         height: 50px;
         width: 50px;
     }
-
     &__name {
         color: #0064ea;
         text-decoration: none;
@@ -67,17 +63,22 @@
     align-items: center;
     justify-content: center;
     margin: 12px 0px;
-
     h3 {
         color: #2b2b2b;
         font-weight: 700;
         margin: 0px;
         margin-right: 8px;
     }
-
     &__decoration {
         border-bottom: dashed 1px rgba(0, 0, 0, 0.2);
     }
+}
+
+.corrective {
+    padding: 8px;
+    color: #2b2b2bd9;
+    font-weight: 300;
+    margin-right: 8px;
 }
 
 .corrective-actions__list {
@@ -85,7 +86,6 @@
     width: 100%;
     border: dashed 1px grey;
     margin-bottom: 12px;
-
     .corrective-actions {
         &__index {
             padding: 8px;
@@ -93,19 +93,16 @@
             color: white;
             font-weight: 500;
             margin-right: 8px;
-
             &--done {
                 background: green;
             }
         }
-
         &__description {
             padding: 8px;
             color: #2b2b2b;
             font-weight: 300;
             margin-right: 36px;
         }
-
         &__area {
             padding: 8px;
             color: #2b2b2b;
@@ -117,7 +114,6 @@
 
 .analysis-result {
     color: rgba(0, 0, 0, 0.5);
-
     span {
         font-weight: 600;
         color: rgba(0, 0, 0, 0.7);
@@ -129,6 +125,7 @@
         width: 100%;
     }
 }
+
 .footer__btn-close {
     border: 1px solid #b00020;
     background: white;
