:art: :hammer: evaluations response Painterro

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.scss
@@ -91,3 +91,8 @@
     letter-spacing: 0.315341px;
     color: rgba(0, 0, 0, 0.6);
 }
+
+.pointer{
+    object-fit: contain;
+    cursor: pointer;
+}
