--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
@@ -23,7 +23,8 @@
         <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
         <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
         <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
-        <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? (data.createdBy.name ? data.createdBy.name : data.createdBy) : 'Sin asignar'}}
+        <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? (data.createdBy.name ?
+            data.createdBy.name : data.createdBy) : 'Sin asignar'}}
         </p>
         <p><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
         <p><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
@@ -44,7 +45,8 @@
             </mat-list-item>
             <div class="container-h2__image">
                 <a [href]="inquiry.inquiryImage" target="_blank" style="cursor: zoom-in">
-                    <img [src]="inquiry.inquiryImage" style="width: 100%" class="mat-elevation-z4" *ngIf="inquiry.inquiryImage">
+                    <img [src]="inquiry.inquiryImage" style="width: 100%" class="mat-elevation-z4"
+                        *ngIf="inquiry.inquiryImage">
                 </a>
             </div>
         </ng-container>
@@ -67,22 +69,26 @@
                 </div>
                 <label for="inquiryImage">
                     <div class="container-h2__image">
-                        <img [src]="imagesUpload" onError="this.src='../../../../../../../assets/img/camara.png'"
-                            alt="inquiry image" style="width: 100%" [ngClass]="{'mat-elevation-z4': imagesUpload}" />
-                        <button mat-icon-button (click)="deleteImage()" *ngIf="imagesUpload">
+                        <img [src]="answerForm.get('answerImage').value"
+                            onError="this.src='../../../../../../../assets/img/camara.png'" alt="inquiry image"
+                            class="pointer"
+                            style="width: 100%" [ngClass]="{'mat-elevation-z4': answerForm.get('answerImage').value}"
+                            (click)="showPizarra()" />
+                        <button mat-icon-button (click)="deleteImage()" *ngIf="answerForm.get('answerImage').value">
                             <mat-icon color="warn">delete</mat-icon>
                         </button>
                     </div>
                 </label>
-                <input id="inquiryImage" type="file" style="display: none;" accept="image/x-png, image/jpg, image/jpeg"
-                    (change)="uploadFile($event)" />
+                <!-- <input id="inquiryImage" type="file" style="display: none;" accept="image/x-png, image/jpg, image/jpeg"
+                    (change)="uploadFile($event)" /> -->
             </form>
         </ng-container>
 
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close [disabled]="loading$ | async">CERRAR</button>
-        <button type="button" mat-raised-button color="primary" class="footer__btn-save"
-        (click)="onSubmit()" [disabled]="loading$ | async">GUARDAR</button>
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close
+            [disabled]="loading$ | async">CERRAR</button>
+        <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="onSubmit()"
+            [disabled]="loading$ | async">GUARDAR</button>
     </mat-dialog-actions>
 </div>
