:art: add sticky header table

--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -48,7 +48,7 @@
       *ngIf="loading$ | async"
     ></mat-progress-bar>
 
-    <div style="overflow: auto">
+    <div style="overflow: auto" [class.header-table-container] = "budgetsDailyEntriesDataSource.data.length !== 0" >
       <table
         mat-table
         [dataSource]="budgetsDailyEntriesDataSource"
@@ -3059,7 +3059,7 @@
 
         <tr
           mat-header-row
-          *matHeaderRowDef="budgetsDailyEntriesDisplayedColumns"
+          *matHeaderRowDef="budgetsDailyEntriesDisplayedColumns; sticky: true"
         ></tr>
         <tr
           mat-row
