:art: update Registrado Actualizar

--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -73,7 +73,7 @@
                   matTooltip="La información de este presupuesto ya existe en la base de datos, por lo que será omitida en el proceso de carga"
                   matTooltipPosition="right"
                 >
-                  Duplicado {{ markAsDuplicated(i) }}
+                Registrado {{ markAsDuplicated(i) }}
                 </div>
 
                 <div *ngIf="!upgrade.isDuplicated" class="entry entry--new">
@@ -92,7 +92,7 @@
                   matTooltipPosition="right"
                   (click)="applyUpgrade(upgrade.fields, i, upgrade.budgetId)"
                 >
-                  Upgrade?
+                Actualizar?
                 </div>
 
                 <div
