🎨 🔨 Reasignación de eventos (Andons)

--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -30,6 +30,10 @@
                 <mat-icon>delete</mat-icon>
                 Borrar
               </button>
+              <button class="w3-small" mat-menu-item (click)="reasign(item)">
+                <mat-icon>edit</mat-icon>
+                Reasignar
+              </button>
             </mat-menu>
 
             <button mat-icon-button [matMenuTriggerFor]="rawMenu">
