--- a/src/app/shared/components/upload-task/upload-task.component.scss
+++ b/src/app/shared/components/upload-task/upload-task.component.scss
@@ -5,7 +5,7 @@
 }
 
 .btn-delete{
-    position: absolute;
-    left: 30%;
-    top: -8%;
+    //position: absolute;
+    //left: 30%;
+    //top: -8%;
 }
