--- a/src/app/shared/components/upload-task/upload-task.component.html
+++ b/src/app/shared/components/upload-task/upload-task.component.html
@@ -1,6 +1,14 @@
 <div *ngIf="percentage | async as pct">
   <progress class="progress is-info" [value]="pct" max="100"></progress>
-  {{ pct | number }}%
+  {{ pct | number}}%
+    <button *ngIf="downloadURL as url"
+        mat-icon-button
+        aria-label="deletelistResult"
+        class="btn-delete"
+        (click)="deleteImage(url)"
+        >
+        <mat-icon style="color: red">delete</mat-icon>
+    </button>
 </div>
 
 <div *ngIf="snapshot | async as snap">
@@ -10,14 +18,8 @@
     <a [href]="url" target="_blank" style="cursor: zoom-in">
       <img [src]="url" class="imageUpload" />
     </a>
-    <button
-      mat-icon-button
-      aria-label="deletelistResult"
-      class="btn-delete"
-      (click)="deleteImage(url)"
-    >
-      <mat-icon style="color: red">delete</mat-icon>
-    </button>
+   
   </mat-card>
   <hr />
 </div>
+
