--- a/src/app/main/pages/andon/settings/dialogs/delete-broadcast-dialog/delete-broadcast-dialog.component.html
+++ b/src/app/main/pages/andon/settings/dialogs/delete-broadcast-dialog/delete-broadcast-dialog.component.html
@@ -19,5 +19,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="deleteBroadcastList()" >SI, BORRAR</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="deleteAndonProblemType()">SI, BORRAR</button>
 </mat-dialog-actions>
