✨ Feature done end  #144

--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -14,10 +14,9 @@
                 <p style="margin-left: 0px;">OT CHILD : {{otChild ? otChild : '---'}} </p>
                 <mat-form-field appearance="outline" id="result" class="report__form--input">
                     <mat-label>Tipo de problema</mat-label>
+
                     <mat-select formControlName="problemType" class="">
-                        <mat-option *ngFor="let item of typeProblem$ | async" [value]="item.name"
-                        (click)="onClickProblemType(item)"
-                        >
+                        <mat-option *ngFor="let item of typeProblem$ | async" [value]="item.name" (click)="onClickProblemType(item)">
                             {{item.name}}</mat-option>
                     </mat-select>
                     <mat-hint *ngIf="!(typeProblem$ | async)">
@@ -39,36 +38,27 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field *ngIf="filteredBroadcast$ | async as broadcasts" appearance="outline" id="result" class="report__form--input">                     
+                <mat-form-field *ngIf="filteredBroadcast$ | async as broadcasts" appearance="outline" id="result" class="report__form--input">
                     <mat-label>Enviar a</mat-label>
                     <mat-chip-list #chipList aria-label="Fruit selection">
-                      <mat-chip
-                        *ngFor="let email of emailArray"
-                        [selectable]="selectable"
-                        [removable]="removable"
-                        (removed)="removeEmail(email)">
-                        {{email}}
-                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                      </mat-chip>
-                      <input
-                        placeholder="agregar nueva lista de difusion..."
-                        #emailInput
-                        [formControl]="broadcastControl"
-                        [matAutocomplete]="auto"
-                        [matChipInputFor]="chipList"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                        (matChipInputTokenEnd)="addBroadcast($event)">
+                        <mat-chip *ngFor="let email of emailArray" [matAutocomplete]="auto" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [selectable]="selectable" [removable]="removable" (removed)="removeEmail(email)">
+                            {{email}}
+                            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                        </mat-chip>
+
+
+                        <input placeholder="agregar nueva lista de difusion..." #emailInput [formControl]="broadcastControl" [matAutocomplete]="auto" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" (matChipInputTokenEnd)="addBroadcast($event)">
                     </mat-chip-list>
+
                     <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedBroadcast($event)">
-                      <mat-option *ngFor="let broadcast of broadcasts" [value]="broadcast">
-                        {{broadcast.name}}
-                      </mat-option>
+                        <mat-option *ngFor="let broadcast of broadcasts" [value]="broadcast">
+                            {{broadcast.name}}
+                        </mat-option>
                     </mat-autocomplete>
                 </mat-form-field>
 
                 <mat-divider style="margin: 20px 0px;"></mat-divider>
-                <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
-                    [class.hovering]="isHovering">
+                <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)" [class.hovering]="isHovering">
                     <p>Arrastrar imágenes</p>
                     <div class="file">
                         <label class="file-label">
