--- a/src/app/main/pages/andon/settings/settings.component.html
+++ b/src/app/main/pages/andon/settings/settings.component.html
@@ -39,7 +39,7 @@
                                         </mat-form-field>
 
                                         <div style="width: 100%; height: 200px; overflow: auto">
-                                            <mat-form-field style="background: white; left:30px;">
+                                            <mat-form-field style="background: white; left:30px; width: 270px;">
                                                 <mat-label>Escribir</mat-label>
                                                 <input type="text" matInput placeholder="Escribir" formControlName="email" (keyup.enter)="addEmail()" />
                                                 <button mat-button matSuffix mat-icon-button>
@@ -50,7 +50,7 @@
                                                 <mat-hint>Presione ENTER para agregar</mat-hint>
                                             </mat-form-field>
                                             <div role="list" *ngFor="let item of emailList; let j = index">
-                                                <div class="item-list">
+                                                <div class="item-list" style="margin-left:30px;width: 80%;">
                                                     <span>{{ item }}</span>
                                                     <span>
                                                 <button
