:bug: Add basic cause to quality report

--- a/src/app/main/pages/quality/external-events/external-events.component.html
+++ b/src/app/main/pages/quality/external-events/external-events.component.html
@@ -91,11 +91,11 @@
                 : 'container-form__work__input--desktop'
             "
           >
-            <mat-label> Número de paqueteo</mat-label>
+            <mat-label> Número de plaqueteo</mat-label>
             <input
               matInput
               type="text"
-              placeholder="Número de paqueteo"
+              placeholder="Número de plaqueteo"
               formControlName="nPackage"
             />
             <mat-error *ngIf="externalForm.controls['nPackage'].errors">
