--- a/src/app/main/pages/quality/analysis/results/dialogs/edit-external-dialog/edit-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/edit-external-dialog/edit-external-dialog.component.html
@@ -71,6 +71,79 @@
                     </mat-error>
                 </mat-form-field>
 
+                <mat-form-field appearance="outline" class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-label>Causa inmediata</mat-label>      
+                    <mat-select formControlName="analysisCauseFailure">
+                      <mat-option *ngFor="let item of immediateCauses$ | async" [value]="item"                    >
+                        {{ item.name }}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error>
+                      <span *ngIf="externalForm.get('analysisCauseFailure').errors?.required"
+                        >Por favor, complete el campo.</span>
+                      <span *ngIf="externalForm.get('analysisCauseFailure').errors?.invalid"
+                        >Dato inválido. Complete con alguna opción válida.</span>
+                    </mat-error>
+                </mat-form-field>
+      
+                <mat-form-field appearance="outline" class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                  <mat-label>Causa básica</mat-label>      
+                  <mat-select placeholder="Escribir..." formControlName="analysisBasicCause" >
+                    <mat-option *ngFor="let item of basicCausesArray" [value]="item" >
+                      {{ item }}
+                    </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="externalForm.get('analysisBasicCause').errors">
+                    Campo <strong>requerido.</strong>
+                  </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-label> Taller resposnable</mat-label>
+                    <mat-select formControlName="workshop">
+                      <mat-option *ngFor="let workshop of responsibleWorkshopList$ | async"  [value]="workshop" >
+                        {{ workshop.workshopName }}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error>
+                        <span *ngIf="externalForm.get('workshop').errors?.required">
+                          Por favor, complete el campo.
+                        </span >
+                        <span *ngIf="externalForm.get('workshop').errors?.invalid" >
+                          Dato inválido. Complete con alguna opción válida.
+                        </span>
+                    </mat-error>
+                  </mat-form-field>
+
+                <mat-form-field appearance="outline" class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-label> Responsable</mat-label>
+                    <input matInput type="text" placeholder="Responsable" formControlName="analysisResponsable" />
+                    <mat-error *ngIf="externalForm.controls['analysisResponsable'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field> 
+
+                <mat-form-field appearance="outline" class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-label> Bahía</mat-label>
+                    <input matInput type="text" placeholder="Bahía" formControlName="analysisBahia" />
+                    <mat-error *ngIf="externalForm.controls['analysisBahia'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>  
+                
+                <mat-form-field appearance="outline" class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-label> Observaciones</mat-label>
+                    <input matInput type="text" placeholder="Observaciones" formControlName="analysisObservations" />
+                    <mat-error *ngIf="externalForm.controls['analysisObservations'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>  
 
             </div>
             <br />
