--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -2,6 +2,7 @@
   <div class="ms-kanban-toolbar mat-elevation-z4">
     <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
       [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+      <mat-label>Taller</mat-label>
       <mat-icon matPrefix>location_on</mat-icon>
       <mat-select [formControl]="workshopControl">
         <mat-option value="">Todos</mat-option>
