--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -9,6 +9,7 @@
     </button>
     <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
       [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+      <mat-label>Taller</mat-label>
       <mat-icon matPrefix>location_on</mat-icon>
       <mat-select [formControl]="workshopControl">
         <mat-option value="">Todos</mat-option>
