--- a/src/app/main/pages/quality/analysis/results/dialogs/edit-internal-dialog/edit-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/edit-internal-dialog/edit-internal-dialog.component.html
@@ -17,67 +17,6 @@
     <form [formGroup]="internalForm" autocomplete="off" class="container-form">
       <div class="container-form__work">
         <mat-form-field
-          class="container-form__work__input"
-          [ngClass]="
-            isMobile
-              ? 'container-form__work__input--mobile'
-              : 'container-form__work__input--desktop'
-          "
-          appearance="outline"
-        >
-          <mat-label>Taller que reporta</mat-label>
-          <input
-            autocomplete="off"
-            type="text"
-            matInput
-            formControlName="reportingWorkshop"
-            [matAutocomplete]="auto1"
-            placeholder="¿En que taller se detecto el problema?"
-          />
-          <mat-autocomplete
-            #auto1="matAutocomplete"
-            [displayWith]="displayFn"
-            autoActiveFirstOption
-            (optionSelected)="setSelectedWorkshop($event)"
-          >
-            <mat-option
-              *ngFor="let option of reportingWorkshops$ | async"
-              [value]="option"
-            >
-              {{ option.workshopName }}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-
-        <mat-form-field
-          class="container-form__work__input"
-          [ngClass]="
-            isMobile
-              ? 'container-form__work__input--mobile'
-              : 'container-form__work__input--desktop'
-          "
-          appearance="outline"
-        >
-          <mat-label>Proceso</mat-label>
-          <input
-            autocomplete="off"
-            type="text"
-            matInput
-            formControlName="reportingWorkshopProcess"
-            [matAutocomplete]="auto2"
-            placeholder="¿En que proceso se detecto este evento?"
-          />
-          <mat-autocomplete #auto2="matAutocomplete" autoActiveFirstOption>
-            <mat-option
-              *ngFor="let option of filteredOptionsWorkshopProcess$ | async"
-              [value]="option"
-            >
-              {{ option }}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-
-        <mat-form-field
           appearance="outline"
           class="container-form__work__input"
           [ngClass]="
@@ -160,6 +99,7 @@
             Campo <strong>requerido.</strong>
           </mat-error>
         </mat-form-field>
+
         <mat-form-field
           appearance="outline"
           class="container-form__work__input"
@@ -204,6 +144,67 @@
       </mat-form-field>
 
       <div class="container-form__work">
+        <mat-form-field
+          class="container-form__work__input"
+          [ngClass]="
+            isMobile
+              ? 'container-form__work__input--mobile'
+              : 'container-form__work__input--desktop'
+          "
+          appearance="outline"
+        >
+          <mat-label>Taller que reporta</mat-label>
+          <input
+            autocomplete="off"
+            type="text"
+            matInput
+            formControlName="reportingWorkshop"
+            [matAutocomplete]="auto1"
+            placeholder="¿En que taller se detecto el problema?"
+          />
+          <mat-autocomplete
+            #auto1="matAutocomplete"
+            [displayWith]="displayFn"
+            autoActiveFirstOption
+            (optionSelected)="setSelectedWorkshop($event)"
+          >
+            <mat-option
+              *ngFor="let option of reportingWorkshops$ | async"
+              [value]="option"
+            >
+              {{ option.workshopName }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+
+        <mat-form-field
+          class="container-form__work__input"
+          [ngClass]="
+            isMobile
+              ? 'container-form__work__input--mobile'
+              : 'container-form__work__input--desktop'
+          "
+          appearance="outline"
+        >
+          <mat-label>Proceso</mat-label>
+          <input
+            autocomplete="off"
+            type="text"
+            matInput
+            formControlName="reportingWorkshopProcess"
+            [matAutocomplete]="auto2"
+            placeholder="¿En que proceso se detecto este evento?"
+          />
+          <mat-autocomplete #auto2="matAutocomplete" autoActiveFirstOption>
+            <mat-option
+              *ngFor="let option of filteredOptionsWorkshopProcess$ | async"
+              [value]="option"
+            >
+              {{ option }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+
         <mat-form-field
           appearance="outline"
           class="container-form__work__input"
@@ -257,24 +258,6 @@
           </mat-error>
         </mat-form-field>
 
-        <!-- <mat-form-field appearance="outline" class="container-form__work__input"
-                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
-                    <mat-label> Taller resposnable</mat-label>
-                    <mat-select formControlName="workshop">
-                      <mat-option *ngFor="let workshop of responsibleWorkshopList$ | async"  [value]="workshop" >
-                        {{ workshop.workshopName }}
-                      </mat-option>
-                    </mat-select>
-                    <mat-error>
-                        <span *ngIf="internalForm.get('workshop').errors?.required">
-                          Por favor, complete el campo.
-                        </span >
-                        <span *ngIf="internalForm.get('workshop').errors?.invalid" >
-                          Dato inválido. Complete con alguna opción válida.
-                        </span>
-                    </mat-error>
-                  </mat-form-field> -->
-
         <mat-form-field
           appearance="outline"
           class="container-form__work__input"
@@ -318,33 +301,31 @@
             Campo <strong>requerido.</strong>
           </mat-error>
         </mat-form-field>
-
-        <mat-form-field
-          appearance="outline"
-          class="container-form__work__input"
-          [ngClass]="
-            isMobile
-              ? 'container-form__work__input--mobile'
-              : 'container-form__work__input--desktop'
-          "
-        >
-          <mat-label> Observaciones</mat-label>
-          <textarea
-            matInput
-            type="text"
-            cols="30"
-            rows="10"
-            placeholder="Observaciones"
-            formControlName="analysisObservations"
-          ></textarea>
-          <!-- <input matInput type="text" placeholder="Observaciones" formControlName="analysisObservations" /> -->
-          <mat-error
-            *ngIf="internalForm.controls['analysisObservations'].errors"
-          >
-            Campo <strong>requerido.</strong>
-          </mat-error>
-        </mat-form-field>
       </div>
+
+      <mat-form-field
+        appearance="outline"
+        class="container-form__area"
+        [ngClass]="
+          isMobile
+            ? 'container-form__area--mobile'
+            : 'container-form__area--desktop'
+        "
+      >
+        <mat-label> Observaciones</mat-label>
+        <textarea
+          matInput
+          type="text"
+          cols="30"
+          rows="10"
+          placeholder="Observaciones"
+          formControlName="analysisObservations"
+        ></textarea>
+        <!-- <input matInput type="text" placeholder="Observaciones" formControlName="analysisObservations" /> -->
+        <mat-error *ngIf="internalForm.controls['analysisObservations'].errors">
+          Campo <strong>requerido.</strong>
+        </mat-error>
+      </mat-form-field>
     </form>
   </mat-dialog-content>
 
